ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.3.2
    • Affects Version/s: 2.3.0
    • Component/s: Replication
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Same problem as SERVER-7562 but for masters of master-slave pairs, rather than primaries of replica sets. Calling db.currentOp() from PyMongo against the current nightly throws a BSON parse error, if there is currently a slave tailing the master's oplog. See Jenkins failures:

      https://jenkins.10gen.com/view/Python/job/mongo-python-driver/

            Assignee:
            Kevin Matulef (Inactive)
            Reporter:
            A. Jesse Jiryu Davis
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: