SERVER-7714 use appendTimestamp, don't corrupt currentOp output with master-slave